Feature: change sign up login logic